# clamav-rs

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  PUBLISH.md  README.md  docker-compose.yml
.buildkite/: build-nightly.sh  build.sh  pipeline.yml
bindings/: Cargo.toml  build.rs
src/: db.rs  engine.rs  error.rs  ffi.rs  fmap.rs  lib.rs  scan_settings.rs  version.rs  windows_fd.rs
test_data/: build-database.sh
test_data/database/: example.cud
test_data/files/: naughty_file
tests/: common.rs  scan_eicar_test_virus.rs
