[package]
name = "clamav-rs"
description = "clamav bindings for Rust"
version = "0.5.2"
authors = ["Jonas Zaddach <jonas.zaddach@gmail.com", "Zachary Sims <zac@icebergdefender.com>"]
homepage = "https://github.com/zaddach/clamav-rs"
repository = "https://github.com/zaddach/clamav-rs"
license = "GPL-2.0"
edition="2018"
categories = ["api-bindings"]
exclude = [
    "test_data/*"
]

[dependencies]
clamav-sys = "0.0.2"
bitflags = "1.2.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
